fix (#185): weird spacing on titling on cards (#207)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -158,7 +158,7 @@ section {
   width: 30px;
   height: 30px;
   border-radius: 1000px;
-  margin-left: 7px;
+  margin-right: 7px;
 }
 
 .avatarrow {
